alignment issue fixed

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,5 +1,15 @@
 @media (min-width: 320px) and (max-width: 480px) {
 
+
+    body,html {
+        margin: 0;
+        padding: 0;
+        width: 100% !important;
+        background-color: #f4f4f4 !important;
+        box-sizing: border-box;
+      
+      
+      }
     .img {
         width: 100% !important;
         height: 100vh !important;
@@ -15,18 +25,18 @@
     .heading {
         font-size: 35px;
         position: absolute;
-        top: 0rem;
-        right: 3rem;
-
+        top: 3rem;  
+        right:8rem;
 
     }
 
     .discreption {
         position: absolute;
-        right: 6rem;
-        top: 17rem;
-        width: 100%;
+        top: 20rem;
+        width: 100% !important;
+        height: auto;
         font-size: 14px;
+        right: 6rem;
     }
 
     .containers {
@@ -38,7 +48,7 @@
 
     .right-side {
         width: 100%;
-        height: 34vh;
+        height: 50vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
