--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@
   padding: 0;
 }
 
-body {
+body,html {
   margin: 0;
   padding: 0;
   background-color: #f4f4f4 !important;
+  box-sizing: border-box;
+  overflow-x: hidden;
 
 
 }
@@ -25,21 +27,21 @@ body {
 
 .heading {
   color: white;
-  width: 100%;
+  width: 90%;
   font-size: 4.5rem;
   font-weight: 700;
   line-height: 1.2;
   position: absolute;
-  /* top: 18rem; */
-  /* left: 8rem; */
+  top: 3rem;
   animation: move;
   animation-duration: 2s;
 }
 
 .discreption {
   position: absolute;
-  top: 22rem;
-  width: 60%;
+  top: 20rem;
+  width: 70%;
+  height: auto;
 
 }
 
@@ -61,8 +63,8 @@ body {
   color: white;
   width: 70%;
   padding-top: 1rem;
-  position: absolute;
   top: 9.5rem;
+  position:relative;
   left: 8rem;
   padding-top: 5rem;
 
